Fix carousel slide's content size on mobile

--- a/src/components/app-carousel/AppCarousel.css
+++ b/src/components/app-carousel/AppCarousel.css
@@ -56,7 +56,7 @@
   right: 0;
   bottom: 36.5%; 
   width: calc((100% - 100vw)/2 + 100vw - 36px);
-  min-width: 550px;
+  min-width: 508px;
 }
 
 .cohiba .slide__content__header {
@@ -96,7 +96,7 @@
   width: calc((100% - 100vw)/2 + 100vw - 36px);
   bottom: 30%;
   text-align: right;
-  min-width: 570px;
+  min-width: 508px;
 }
 
 .coffee-embassador .slide__content__body p:nth-child(1),
